--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,12 +28,14 @@ dist.jar=${dist.dir}/Pasantias.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 excludes=
 file.reference.iText-2.1.7.js2.jar=iText-2.1.7.js2.jar
+file.reference.jasperreports-6.20.5.jar=jasperreports-6.20.5.jar
 file.reference.mysql-connector-j-9.1.0.jar=mysql-connector-j-9.1.0.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${file.reference.mysql-connector-j-9.1.0.jar}:\
-    ${file.reference.iText-2.1.7.js2.jar}
+    ${file.reference.iText-2.1.7.js2.jar}:\
+    ${file.reference.jasperreports-6.20.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
